Reduce the changes between xvncpro and qvdclient to L